--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
 /* Main style sheet containing the other styp sheets */
 /* Just reference this one in the html */
-@import 'mainBlog.css';
-@import 'blogPost.css';
+@import 'contents.css';
+@import 'buttons.css';
