Created the basic layout for the blog

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 /* Main style sheet containing the other styp sheets */
 /* Just reference this one in the html */
-@import 'contents.css';
+@import 'containers.css';
 @import 'buttons.css';
+@import 'images.css';
