Changed the file structure and refactored a few things to get ready for adding the content

--- a/css/containers.css
+++ b/css/containers.css
@@ -26,18 +26,18 @@ body {
 /*3 rows, nav on left small, small header and footer*/
 @media (min-width:600px) {
   .container{
-    display:grid;
-    height:100%;
+    /* display:grid; */
+    /* height:100%; */
     grid-template-columns: repeat(8, 1fr);
     grid-template-rows: 10px, repeat(10, 1fr);
     grid-template-areas: 
     "hd hd hd hd hd hd hd hd"
     "nav main main main main main main main"
     "ft ft ft ft ft ft ft ft";
-    grid-auto-rows: minmax(1fr,auto);
-    border: 2px solid red;
-    gap: 10px;
-    padding: 10px;
+    /* grid-auto-rows: minmax(1fr,auto); */
+    /* border: 2px solid red; */
+    /* gap: 10px; */
+    /* padding: 10px; */
     
   }
 }
@@ -48,7 +48,7 @@ body {
 .blogprecontainer{
   display:grid;
   border: 2px solid lawngreen;
-  grid-auto-rows: minmax(1fr,auto);
+  /* grid-auto-rows: minmax(1fr,auto); */
   grid-area: main;
   grid-template-columns: 1fr; 
 }
@@ -57,10 +57,10 @@ body {
 /*blog previews are 2 accross*/
 @media (min-width: 600px) and (max-width:900px) {
   .blogprecontainer{
-    display:grid;
-    border: 2px solid lawngreen;
-    grid-auto-rows: minmax(1fr,auto);
-    grid-area: main;
+    /* display:grid; */
+    /* border: 2px solid lawngreen; */
+    /* grid-auto-rows: minmax(1fr,auto); */
+    /* grid-area: main; */
     grid-template-columns: 1fr 1fr; 
   }
 }
@@ -69,10 +69,10 @@ body {
 /*blog previews are 3 accross*/
 @media (min-width:901px) {
   .blogprecontainer{
-    display:grid;
-    border: 2px solid lawngreen;
-    grid-auto-rows: minmax(1fr,auto);
-    grid-area: main;
+    /* display:grid; */
+    /* border: 2px solid lawngreen; */
+    /* grid-auto-rows: minmax(1fr,auto); */
+    /* grid-area: main; */
     grid-template-columns: 1fr 1fr 1fr; 
   }
 }
@@ -93,10 +93,21 @@ body {
   border: 2px solid black;
 }
 
-/*Grid container for the navigation options*/
+/*For big and medium screens, navigation in multiple rows*/
 .navcontainer{
   border: 2px solid rgb(255, 100, 178);
   grid-area: nav;
+}
+
+/*Grid container for the navigation options*/
+/*For small screens, just one row with 3 columns*/
+@media (max-width:600px) {
+  .navcontainer{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    /* border: 2px solid rgb(255, 100, 178);
+    grid-area: nav; */
+  }
 }
 
 /*Flex container for each navigation option*/
@@ -104,8 +115,8 @@ body {
   display:flex;
   flex-wrap: wrap;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  align-items: left;
+  /* justify-content: center; */
   border: 2px solid purple;
 } 
 
