--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 /* Main style sheet containing the other styp sheets */
 /* Just reference this one in the html */
 @import 'containers.css';
-@import 'buttons.css';
-@import 'images.css';
+@import 'tags.css';
+@import 'blog.css';
+@import 'button.css'
