--- a/css/blog.css
+++ b/css/blog.css
@@ -2,7 +2,6 @@
 /*blog previews are 1 accross*/
 .blog-preview-grid{
   display:grid;
-  border: 2px solid lawngreen;
   grid-area: main;
   grid-template-columns: 1fr; 
 }
@@ -37,7 +36,6 @@
 /*actual blog is 1 accross*/
 .blog-grid{
   display:grid;
-  border: 2px solid lawngreen;
   grid-area: main;
   grid-template-columns: 1fr; 
 }
@@ -49,7 +47,6 @@
   flex-wrap: wrap;
   flex-direction: row;
   flex-flow:row wrap;
-  height:400px;
   border: 2px solid black;
   box-shadow: 5px 10px rgba(128, 128, 128, 0.411)
 }
@@ -60,16 +57,30 @@
   flex-wrap:wrap;
   align-items: center;
   justify-content: center;
+  max-height: 400px;
   width:100%;
   height:75%;
 }
+
+.blog-pic-text{
+  display:flex;
+  flex-wrap:wrap;
+  align-items: initial;
+  justify-content: center;
+  font-weight: bold;
+  width: 100%;
+  margin:0px;
+  padding-bottom:5px;
+}
+
 
 /*container for the blog text*/
 .blog-text{
   display:flex;
   flex-wrap:wrap;
-  align-items: center;
-  justify-content: center;
+  align-items: initial;
+  justify-content: start;
+  width: 100%;
   margin:0px;
   padding-bottom:5px;
 }
