--- a/css/button.css
+++ b/css/button.css
@@ -1,6 +1,6 @@
 .button {
     border: 0;
-    width:100%;
+    width: 100%;
     line-height: 2.5;
     object-fit: fill;
     /* padding: 0 20px; */
@@ -10,12 +10,8 @@
     text-shadow: 1px 1px 1px #000;
     border-radius: 10px;
     background-color: rgb(0, 220, 0);
-    background-image: linear-gradient(to top left,
-                                      rgba(0, 0, 0, .2),
-                                      rgba(0, 0, 0, .2) 30%,
-                                      rgba(0, 0, 0, 0));
-    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6),
-                inset -2px -2px 3px rgba(0, 0, 0, .6);
+    background-image: linear-gradient(to top left, rgba(0, 0, 0, .2), rgba(0, 0, 0, .2) 30%, rgba(0, 0, 0, 0));
+    box-shadow: inset 2px 2px 3px rgba(255, 255, 255, .6), inset -2px -2px 3px rgba(0, 0, 0, .6);
 }
 
 .button:hover {
@@ -23,13 +19,12 @@
 }
 
 .button:active {
-    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6),
-                inset 2px 2px 3px rgba(0, 0, 0, .6);
+    box-shadow: inset -2px -2px 3px rgba(255, 255, 255, .6), inset 2px 2px 3px rgba(0, 0, 0, .6);
 }
 
 .buttontext {
     font-size: 1rem;
     text-align: center;
     color: #fff;
-    text-decoration:none;
+    text-decoration: none;
 }
