Added some required tags <b>, <i>, <u> and <blockquote>.

--- a/css/tags.css
+++ b/css/tags.css
@@ -17,6 +17,7 @@ h1 {
 h2 {
   font-family: Comic Sans, Comic Sans MS, cursive;
   font-size: medium;
+  font-weight: lighter;
 }
 
 /*Used in the footer*/
